<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorOnPrimaryLightConnection"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/wifi" />
    </LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connection_check_oops"
        android:textStyle="bold"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/colorAccentConnection"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connection_check_no_internet_connection"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/colorAccentConnection"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connection_check_please_check_your_connection"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/colorAccentConnection"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRetry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:textAllCaps="true"
        android:text="@string/connection_check_retry"
        android:textColor="@color/colorOnPrimaryConnection"
        android:background="@drawable/button_shape"
        />
</LinearLayout>